# hivebot_ws

./: my_map_save.pgm  my_map_save.yaml  my_map_serial.data  toilet_save.pgm  toilet_save.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ball_tracker/share/ball_tracker/: package.sh
install/detect_toilet/lib/detect_toilet/: detect_toilet
install/detect_toilet/share/detect_toilet/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hello_moveit/lib/hello_moveit/: clean_toilet_node  clean_western_node  gripper  hello_moveit  home  pick_sprayer
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hivebot/share/hivebot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hivebot_description/share/hivebot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hivebot_moveit_config/share/hivebot_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/move_robot/lib/move_robot/: move_robot  move_robot.py
install/move_robot/share/move_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh
install/moveit_config/share/moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/src/share/src/: local_setup.bash  local_setup.dsv  local_setup.sh  (+7 more)
log/: latest_build  latest_list
src/Hivebot/: CMakeLists.txt
src/Hivebot/config/: mapper_params_online_async.yaml  view_bot.rviz
src/Hivebot/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ur5robot.urdf.xacro
src/Hivebot/launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  robot_bringup.launch.py  rsp.launch.py
src/Hivebot/map/: toilet_serial.data
src/Hivebot/worlds/: dummy.world  toilet.world  toilet2.world
src/hello_moveit/: CMakeLists.txt
src/hello_moveit/config/: delay_time.yaml
src/hello_moveit/launch/: clean_toilet.launch  spray.launch.py  toilet.launch.py
src/hello_moveit/src/: clean_toilet.cpp  clean_western.cpp  gripper.cpp  home.cpp  pick_sprayer.cpp
src/ur_moveit_config/: .setup_assistant
src/ur_moveit_config/config/: arm_controller.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
src/ur_moveit_config/launch/: arm_control.launch.py  demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+355 files in other folders)
